testing fix for horizontal scroll on transform

--- a/resources/style/main.css
+++ b/resources/style/main.css
@@ -104,6 +104,7 @@ p {
 }
 
 #content {
+    overflow-x: hidden;
     width: 100%;
     height: 100%;
     padding: 0 40px;
@@ -127,7 +128,7 @@ p {
     max-width: 1200px;
     width: 100%;
     padding: 20px 30px;
-    margin: 20px auto;
+    margin: 20px auto 40px;
     box-sizing: border-box;
 }
 
